# python-template

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  Vagrant-bootstrap.sh  Vagrantfile  main.py  pyproject.toml  requirements-3-10-jupyterlab.txt  requirements-3-10-pytest.txt  requirements.txt  test_main.py
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: issue-bug.yml
.github/workflows/: python-run-tests.yml
application/: main.py
data/: MOCK_DATA.csv
docs/: mock_data.md
helpers/: helpers_main.py
test/: test_helpers_main.py  test_main.py
test/helpers/: test_helpers_main.py
vagrant/: Vagrant-bootstrap.sh  Vagrantfile
